# VulkanRender

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/scenes/: v1.scene
assets/test_scenes/: CornellBox.mtl  CornellBox.xml
assets/test_scenes/cornell_heads/: cornell_box_only.xml  cornell_heads.mtl
docs/: ARCHITECTURE.md  BUILDING.md  DEVLOG.md  RENDER_ME.md  ROADMAP.md  V1_FEATURES.md  V2_FEATURES.md  V3_FEATURES.md  V4_FEATURES.md  V5_FEATURES.md  V5_RT_DENOISING.md  V6_FEATURES.md  VALIDATION_PIPELINE.md
feature_video/: v1-2.mov  v1-3.mov  v4-1.mov
scripts/: build_msvc.bat  compile_v5_shader_dxc.bat  smoke_msvc.bat
shaders/hybrid_rt/: miss.rmiss.spv  raygen.rgen.spv  reflection_hit.rchit.spv
shaders/v1/: simple_forward.frag  simple_forward.vert
shaders/v5/: closesthit.rchit  miss.rmiss  raygen.rgen
shaders/v6/hybrid_render_path/: composition.frag.spv  composition.vert.spv  depth_prepass.frag.spv  depth_prepass.vert.spv  gbuf.frag.spv  gbuf.vert.spv  reflection_miss.rmiss.spv  ssao.comp.spv  ssao_blur.comp.spv  ssr.comp.spv  svgf.comp.spv  svgf_atrous_filter.comp.spv
shaders/v6/imgui/: imgui.frag.spv  imgui.vert.spv
shaders/vulkan_gpu/: shadow_depth.vert.hlsl  shadow_depth.vert.spv  simple_color.frag.hlsl  simple_color.frag.spv  simple_color.vert.hlsl  simple_color.vert.spv  skybox.frag.hlsl  skybox.frag.spv  skybox.vert.hlsl  skybox.vert.spv  v4_fullscreen.vert.hlsl  v4_fullscreen.vert.spv  v4_gbuffer.frag.hlsl  v4_gbuffer.frag.spv  v4_instanced_sphere.vert.hlsl  v4_instanced_sphere.vert.spv  v4_ssao.frag.hlsl  v4_ssao.frag.spv  v4_ssao_blur.frag.hlsl  v4_ssao_blur.frag.spv  v4_ssao_compose.frag.hlsl  v4_ssao_compose.frag.spv  v5_denoise.comp.hlsl  v5_denoise.comp.spv  v5_downsample.comp.hlsl  v5_downsample.comp.spv  v5_raytrace.comp.hlsl  v5_raytrace.comp.spv  v5_rt_pipeline.hlsl  v5_rt_pipeline_shadow_rmiss.spv  v5_shared.hlsl
src/: CMakeLists.txt  main.cpp
src/core/: FeatureProfile.cpp  FeatureProfile.hpp  RenderGraph.cpp  RenderGraph.hpp  RendererApp.cpp  RendererApp.hpp  ValidationPipeline.cpp  ValidationPipeline.hpp
src/platform/: CommandLine.cpp  CommandLine.hpp  PreviewWindow.cpp  PreviewWindow.hpp  VulkanCommandRecorder.cpp  VulkanCommandRecorder.hpp  VulkanLoader.cpp  VulkanLoader.hpp  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.hpp  VulkanPreviewWindow.cpp  VulkanPreviewWindow.hpp  VulkanRenderPassBuilder.cpp  VulkanRenderPassBuilder.hpp  VulkanTypes.hpp
src/render/: MathTypes.hpp  SoftwareV1Renderer.cpp  SoftwareV1Renderer.hpp
src/rhi/: RenderDevice.cpp  RenderDevice.hpp  VulkanDevice.cpp  VulkanDevice.hpp
src/vulkan/: VulkanCommandRecorder.cpp  VulkanCommandRecorder.hpp  VulkanLoader.cpp  VulkanLoader.hpp  VulkanPass.hpp  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.hpp  VulkanRenderPassBuilder.cpp  VulkanRenderPassBuilder.hpp  VulkanTypes.hpp
src/vulkan/passes/: DeferredComposePass.hpp  ForwardPass.hpp  GBufferPass.hpp  RayTracingPass.hpp  SSAOPass.hpp  ShadowPass.hpp
tests/: CMakeLists.txt  profile_tests.cpp
